--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <p class="links">
           <a class="btn" href="https://github.com/Jabarteley" target="_blank" rel="noopener">GitHub</a>
           <a class="btn outline" href="https://web-portfolio-abduljabar.vercel.app/" target="_blank" rel="noopener">Portfolio</a>
+          <a class="btn" href="./images/Abduljabar-Asaju-Resume1.pdf" download>Download Resume</a>
         </p>
       </div>
       <div class="hero-right">
@@ -48,7 +49,7 @@
         <div>
           <h4>Contact</h4>
           <ul class="plain">
-            <li>Email: <a href="mailto:jabarasaju@gmail.com">jabarasaju@gmail.com</a></li>
+            <li>Email: <a href="mailto:zagajabar1@gmail.com">zagajabar1@gmail.com</a></li>
             <li>Phone: <a href="tel:09045398005">09045398005</a></li>
             <li>Location: Plot 9, Greenhill estate, Oko oba, Agege, Lagos, Nigeria</li>
             <li>GitHub: <a href="https://github.com/Jabarteley" target="_blank">github.com/Jabarteley</a></li>
@@ -84,7 +85,7 @@
           <li>Federal University Wukari ICT Department</li>
         </ul>
         <p>See more projects on my portfolio: <a href="https://web-portfolio-abduljabar.vercel.app/" target="_blank">web-portfolio-abduljabar.vercel.app</a></p>
-        
+
       </div>
     </section>
 
@@ -125,7 +126,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>© Abduljabar Asaju  <a href="mailto:jabarasaju@gmail.com">jabarasaju@gmail.com</a></p>
+      <p>© Abduljabar Asaju  <a href="mailto:zagajabar1@gmail.com">zagajabar1@gmail.com</a></p>
     </div>
   </footer>
 
